# tirf-hal

./: .gitmodules  454_hal.c  README.md  meson.build
apps/: capture_service.cpp  meson.build
assets/config/: 454-hal.service  hardware_configuration_micrsocope.json  hardware_configuration_transformer.json  libcamera_config.json  libcamera_parameters.ini  libcamera_rpi_config_file.yml  pylablib_config.json  vc_camera_config.json
assets/examples/: example_image_sequence.json  image_sequence_stress.json
camera/: icamera.hpp  image_buffer.cpp  image_buffer.hpp  meson.build  pi_camera.cpp  pi_camera.hpp  pylablib_camera.cpp  pylablib_camera.hpp  tiff.cpp  tiff.hpp  v4l2_camera.cpp  v4l2_camera.hpp  vc_camera.cpp  vc_camera.hpp
gui/: gui_command.cpp  gui_command.hpp  meson.build  status_server.cpp  status_server.hpp
hal/: hal.cpp  hal.hpp  meson.build  motor.cpp  motor.hpp
protocol/: cleaving.cpp  cleaving.hpp  image_sequence.cpp  image_sequence.hpp  meson.build
utils/: c_utils.hpp
